--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,14 @@
     --accent-color: #2196F3;
     --primary-white-color: #FFFFFF;
     --secondary-color: #F5F4FA;
-    --transparent-white-color: rgba(255, 255, 255, 0.6)
+    --transparent-white-color: rgba(255, 255, 255, 0.6);
+    --indent: 30px;
+    --items-count: 3;
+    --footer-color: #2F303A;
+    --border: #EEEEEE;
 }
+
+
 
 body {
     background-color: var(--primary-white-color);
@@ -20,6 +26,7 @@ body {
     margin: 0;
     list-style: none;
 }
+
 /* колір основного тексту #212121 */
 /* вторинний колір #757575 */
 /* акцент #2196F3 */
@@ -28,7 +35,10 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
+
 
 
 /* logo */
@@ -46,7 +56,31 @@ body {
     color: #000000;
 }
 
+.header-nav {
+    display: flex;
+    align-items: center;
+}
+
+.main-nav {
+    display: flex;
+    align-items: center;
+}
+
 /* site-nav */
+
+.site-nav {
+    display: flex;
+    margin-left: 93px;
+}
+
+.site-nav .item {
+    margin-right: 50px;
+}
+
+.site-nav .item:last-child {
+    margin-right: 0;
+}
+
 .site-nav .link {
     color: var(--title-text-color);
     font-weight: 500;
@@ -65,6 +99,20 @@ body {
     color: var(--accent-color);
 }
 
+/* contact-nav */
+
+.contact-nav {
+    display: flex;
+    margin-left: auto;
+    margin-top: 32px;
+    margin-bottom: 32px;
+}
+
+.contact-nav .item + .item {
+    margin-left: 50px;
+}
+
+
 .contact-nav .link {
     color: var(--primary-text-color);
     text-decoration: none;
@@ -81,6 +129,7 @@ body {
     letter-spacing: 0.03em;
     color: #FFFFFF;
 }
+
 /* hero */
 
 .hero {
@@ -100,6 +149,22 @@ body {
 
 /* section */
 
+
+.hide {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+    /* visibility: hidden;
+    height: 0; */
+
 .section {
     margin-bottom: 94px;
 }
@@ -108,6 +173,7 @@ body {
     padding-top: 94px;
     padding-bottom: 94px;
     margin-bottom: 0;
+    background-color: var(--secondary-color);
 }
 .section-title {
     margin-top: 0;
@@ -121,6 +187,21 @@ body {
 }
 
 /* features */
+
+.features {
+    display: flex;
+    justify-items: center;
+    margin-top: 94px;
+}
+.features-item {
+    margin-right: 30px;
+    width: 270px;
+}
+
+.features-item:last-child {
+    margin-right: 0;
+}
+
 .features .title {
 
     margin-top: 0;
@@ -142,10 +223,25 @@ body {
     letter-spacing: 0.03em;
 }
 
+/* about */
+
+.list.about {
+    display: flex;
+    justify-content: space-between;
+}
+
 /* our team */
+
+.team-info {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+
+
 .team .title {
     margin-top: 0;
-    margin-bottom: 50;
+    margin-bottom: 10;
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 16px;
@@ -161,6 +257,16 @@ body {
     text-align: center;
     letter-spacing: 0.03em;
 }
+
+.team {
+    display: flex;
+}
+.team-card {
+    width: 270px;
+    margin-right: 30px;
+    background-color: var(--primary-white-color);
+}
+
 
 /* button */
 .button {
@@ -185,14 +291,63 @@ body {
     letter-spacing: 0.06em;
 }
 
+.button.secondary {
+    border-color: transparent;
+    border-radius: 4px;
+    padding: 6px 22px;
+    color: var(--title-text-color);
+    background-color: var(--primary-white-color);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+}
+
+.button.different {
+    border-color: transparent;
+    border-radius: 4px;
+    padding: 6px 25px;
+    color: var(--title-text-color);
+    background-color: var(--primary-white-color);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+}
+
+
+
 /* footer */
 
-.footer {
-    background-color: #212121;
+.bottom {
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
+
+.footer {
+    background-color: var(--footer-color);
+}
+.footer-li {
+    margin-bottom: 9px;
+}
+
 
 .footer-logo {
     color: var(--primary-white-color);
+}
+
+.second-logo {
+    display: block;
+    margin-bottom: 20px;
+    color: var(--accent-color);
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    text-decoration: none;
 }
 
 .contact-footer .link {
@@ -210,6 +365,45 @@ body {
 }
 
 /* portfolio main */
+
+.list-portfolio,
+.list-filter {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+ .list-filter {
+    justify-content: center;
+    margin-bottom: 34px;
+ }
+
+ /* width: 575px; */
+
+.filter-li {
+    margin-right: 8px;
+}
+
+.filter-li:last-child {
+    margin-right: 0;
+}
+
+.element:nth-child(3n) {
+    margin-right: 0;
+}
+
+.element {
+    flex-basis: calc((100% - 60px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+/* border: 1px solid var(--border) */
+
+.element:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+}
 
 .filters .button {
     background-color: var(--secondary-color);
@@ -234,6 +428,11 @@ body {
     line-height: 2;
     letter-spacing: 0.06em;
     text-decoration: none;
+}
+
+.filters .container {
+    margin-top: 94px;
+    margin-bottom: 94px;
 }
 
 .filters .link {
