--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
     --items-count: 3;
     --footer-color: #2F303A;
     --border: #EEEEEE;
+    --header: #ECECEC;
 }
 
 
@@ -25,6 +26,10 @@ body {
     padding: 0;
     margin: 0;
     list-style: none;
+}
+
+.header {
+    outline: 1px solid var(--header);
 }
 
 /* колір основного тексту #212121 */
@@ -385,6 +390,15 @@ body {
     margin-right: 8px;
 }
 
+.image {
+    display: block;
+}
+
+.filters-info {
+    padding: 20px 24px;
+    border: 1px solid var(--border);
+}
+
 .filter-li:last-child {
     margin-right: 0;
 }
@@ -431,8 +445,8 @@ body {
 }
 
 .filters .container {
-    margin-top: 94px;
-    margin-bottom: 94px;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .filters .link {
